--- a/freshrss-mcp-server/pyproject.toml
+++ b/freshrss-mcp-server/pyproject.toml
@@ -35,8 +35,10 @@ asyncio_mode = "auto"
 [tool.ruff]
 target-version = "py311"
 line-length = 100
+
+[tool.ruff.lint]
 select = ["E", "F", "I", "N", "W", "UP", "B", "C4", "SIM"]
-ignore = ["E501"]
+ignore = ["E501", "W293"]
 
 [tool.ruff.lint.pydocstyle]
 convention = "google"
