--- a/freshrss-mcp-server/pyproject.toml
+++ b/freshrss-mcp-server/pyproject.toml
@@ -8,6 +8,8 @@ dependencies = [
     "mcp[cli]>=1.0.0",
     "httpx>=0.27.0",
     "pydantic>=2.0.0",
+    "uvicorn>=0.27.0",
+    "starlette>=0.37.0",
 ]
 
 [project.optional-dependencies]
